# AutoR

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  config.local.example.yaml  config.yaml  mkdocs.yml  pyproject.toml  workflow.md  workflow_full.md
.github/: copilot-instructions.md
.github/skills/audit/: SKILL.md
.github/skills/autodownload/: SKILL.md
.github/skills/autodownload-expand/: SKILL.md
.github/skills/autodownload-outline/: SKILL.md
.github/skills/autodownload-overview/: SKILL.md
.github/skills/autor-overview/: SKILL.md
.github/skills/check/: SKILL.md  bad-example.md
.github/skills/citation-check/: SKILL.md
.github/skills/citations/: SKILL.md
.github/skills/critic/: SKILL.md
.github/skills/document/: SKILL.md
.github/skills/draw/: SKILL.md
.github/skills/enrich/: SKILL.md
.github/skills/explore/: SKILL.md
.github/skills/export/: SKILL.md
.github/skills/graph/: SKILL.md
.github/skills/import/: SKILL.md
.github/skills/index/: SKILL.md
.github/skills/ingest/: SKILL.md
.github/skills/insights/: SKILL.md
.github/skills/literature-review/: SKILL.md
.github/skills/metrics/: SKILL.md
.github/skills/orchestrator/: SKILL.md
.github/skills/orchestrator/references/: full-review-coverage-mode.md
.github/skills/paper-writing/: SKILL.md
.github/skills/plan/: SKILL.md
.github/skills/plot-enhance/: SKILL.md
.github/skills/polish/: SKILL.md
.github/skills/polish/example/: README.md  excerpts.md  originals.md  strategies.md
.github/skills/polish/reference/: Ge-2022.md  Giacomello-2020.md  Herzig-2018.md  White-2012.md
.github/skills/rename/: SKILL.md
.github/skills/research-gap/: SKILL.md
.github/skills/review-response/: SKILL.md
.github/skills/search/: SKILL.md
.github/skills/setup/: SKILL.md
.github/skills/show/: SKILL.md
.github/skills/topics/: SKILL.md
.github/skills/translate/: SKILL.md
.github/skills/trials/: SKILL.md
.github/skills/trials/examples/: cart-sequential-api-sample.json  example-results.json
.github/skills/trials/resources/: live-retrieval-playbook.md  output-schema.json
.github/skills/trials/tools/: build_search_plan.py  clinical_trials_common.py  render_trial_summary.py  retrieve_trials.py
.github/skills/update/: SKILL.md
.github/skills/write/: SKILL.md
.github/skills/writing-polish/: SKILL.md
autor/: audit.py  citation_check.py  citation_styles.py  cli.py  config.py  explore.py  export.py  index.py  loader.py  log.py  mcp_server.py  metrics.py  migrate.py  plot.py  setup.py  topics.py  translate.py  vectors.py  workspace.py
autor/ingest/: extractor.py  mineru.py  pipeline.py
autor/sources/: arxiv.py  endnote.py  local.py  zotero.py
autor/write_agent/: assets.py  config.py  contracts.py  draft.py  gates.py  integrate.py  kernels.py  llm.py  models.py  orchestrator.py  patterns.py  polish.py  preflight.py  prompts.py  revise.py  runner.py  seeds.py  workspace_io.py
autor/write_agent/pattern_library/: README.md  failure-cases.jsonl  human-moves.json  lexical-ai-markers.jsonl  license-audit.tsv  negative-patterns.json  positive-passages.jsonl  rewrite-recipes.jsonl  sources.yaml  table-patterns.jsonl
docs/: changelog.md  contributing.md  index.md
docs/api/: index.md
docs/getting-started/: agent-setup.md  configuration.md  installation.md
docs/guide/: ingestion.md  search.md  webtools-integration.md  writing.md
docs/project-analysis/: 01-explore-enhancement.md  02-long-pdf-splitting.md  03-general-document-ingestion.md
scripts/: run-mcp.sh  start.sh  stop.sh
scripts/windows/: start.ps1  stop.ps1
tests/: conftest.py  test_arxiv_source.py  test_audit.py  test_citation_check.py  test_citation_styles.py  test_cli_messages.py  test_config.py  test_document.py  test_explore.py  test_export.py  test_export_extended.py  test_extract.py  test_extractor.py  test_index.py  test_loader.py  test_loader_l3.py  test_log.py  test_mcp_server.py  test_metadata_models.py  test_metrics.py  test_migrate.py  test_mineru.py  test_papers.py  test_pipeline_workspace.py  test_plot.py  test_setup.py  test_translate.py  test_vectors.py  test_workspace.py  test_write_agent_assets.py  test_write_agent_cli.py  test_write_agent_draft.py  test_write_agent_gates.py  test_write_agent_mcp.py  test_write_agent_pattern_library.py  test_write_agent_patterns.py  test_write_agent_polish.py  test_write_agent_preflight.py  test_write_agent_workspace_io.py  test_writer.py
