[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "autor"
version = "0.1.0"
description = "autor — local academic literature explorer powered by AI"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Zimo Liao", email = "zimoliao@mail.ustc.edu.cn"},
]
keywords = ["academic", "literature", "research", "knowledge-base", "semantic-search", "mcp", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "requests>=2.28",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/zimoliao/autor"
Repository = "https://github.com/zimoliao/autor"
Issues = "https://github.com/zimoliao/autor/issues"

[project.optional-dependencies]
embed = [
    "sentence-transformers>=3.0",
    "numpy>=1.24",
    "faiss-cpu>=1.7",
]
topics = [
    "autor[embed]",
    "bertopic>=0.16",
    "pandas>=2.0",
]
import = [
    "endnote-utils>=1.0",
    "pyzotero>=1.5",
]
mcp = [
    "mcp>=1.0",
]
full = [
    "autor[embed]",
    "autor[topics]",
    "autor[import]",
    "modelscope>=1.10",
    "curl-cffi>=0.5",
]
dev = ["pytest>=7.0"]

[project.scripts]
autor = "autor.cli:main"
autor-mcp = "autor.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["autor", "autor.*"]
